syntax = "proto3";
option java_multiple_files = true;
package org.xapik.ploy.jobworker;

service JobWorkerService {
  rpc GetWorkItems (WorkRequest) returns (WorkResponse) {}
}

message WorkRequest {}

message WorkItem {
  string inputs = 1;
  string jobName = 2;
}

message WorkResponse {
  repeated WorkItem workitems = 1;
}
